# wmm-qt

./: .gitignore  CMakeLists.txt  README.md  csvfile.cpp  csvfile.h  database.cpp  database.h  database.sql  databasesettingsdialog.h  docker-compose.yml  importfile.cpp  importfile.h  importfile.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sqlserver.sh  wmm_ca_ES.ts
database/: database.sql  docker-compose.yml
dialogs/: DatabaseSettings.cpp  DatabaseSettings.h  DatabaseSettings.ui  NewCategoryDialog.cpp  NewCategoryDialog.h  NewCategoryDialog.ui  databasesettingsdialog.cpp  databasesettingsdialog.ui
doc/: suggested-categories-ca.md  suggested-categories-en.md  suggested-categories-es.md
helpers/: Database.cpp  Database.h
lang/: wmm_ca_ES.ts  wmm_en.ts  wmm_es_ES.ts
lib/: CsvFile.cpp  CsvFile.h  Database.cpp  Database.h
main/: main.cpp
test/: N26.csv  Santander.csv
views/: BrowseBankView.cpp  BrowseBankView.h  BrowseBankView.ui  BrowseCategoriesView.cpp  BrowseCategoriesView.h  BrowseCategoriesView.ui  BrowseData.cpp  BrowseData.h  BrowseData.ui  BrowseDataView.cpp  BrowseDataView.h  BrowseDataView.ui  CategoriesView.cpp  CategoriesView.h  CategoriesView.ui  CategorizeView.cpp  CategorizeView.h  CategorizeView.ui  DuplicatesView.cpp  DuplicatesView.h  DuplicatesView.ui  ImportFileView.cpp  ImportFileView.h  ImportFileView.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SqlCommandView.cpp  SqlCommandView.h  SqlCommandView.ui  importfile.cpp  importfile.h  mainwindow.cpp
widgets/: BrowseTableWidget.cpp  BrowseTableWidget.h  CustomTableWidget.cpp  CustomTableWidget.h  MessageBox.cpp  MessageBox.h  TransactionsTable.cpp  TransactionsTable.h
